--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html>
+  {% load staticfiles %}
+  <link type="text/css" rel="stylesheet" href="{% static 'blog/foundation.css' %}"/>
   <head>
-    <h1><a href="">David Lance</a></h1>
+    <h1><a href="{% url 'blog:post_list' %}">David Lance</a></h1>
   </head>
   
-  <body>
-    <h2><a href="{% url 'blog:post' post.id %}">{{ post.title }}</a></h2>
-    <p>published: {{ post.pub_date }}</p>
-    <p>{{ post.text|linebreaks }}</p>
-  </body>
+  <div class="row">
+    <div class ="small-10 small-centered columns">
+      <h2><a href="{% url 'blog:post' post.id %}">{{ post.title }}</a></h2>
+      <p>published: {{ post.pub_date }}</p>
+      <p>{{ post.text|linebreaks }}</p>
+    </div>
+  </div>
 </html>
