--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <h1><a href="/">David Lance</a></h1>
-    </head>
-
-    {% for post in posts %}
-        <div>
-          <h2><a href="{% url 'blog:post' post.id %}">{{ post.title }}</a></h2>
+<html class="no-js" lang="en">
+  <head>
+    {% load staticfiles %}
+    <link type="text/css" rel="stylesheet" href="{% static 'blog/foundation.css' %}"/>
+    <meta charset="utf-8"/>
+    <title>David Lance | Blog</title>
+  </head>
+  <body>
+    <div class="callout large primary">
+      <div class="row column text-center">
+        <h1><a href="{% url 'blog:post_list' %}">David Lance</a></h1>
+        <h2 class="subheader">Blog Description</h2>
+        <h3 class="subheader">Resume</h3>
+        <h3 class="subheader">About</h3>
+      </div>
+    </div>
+    <div class="row medium-8 large-7 columns">
+      {% for post in posts %}
+        <div class="row">
+          <div class="small-10 small-centered columns">
+            <h2><a href="{% url 'blog:post' post.id %}">{{ post.title }}</a></h2>
             <p>published: {{ post.pub_date }}</p>
-            <!---
-            <p>{{ post.text|linebreaks }}</p>
-            -->
+          </div>
         </div>
-    {% endfor %}
+      {% endfor %}
+    </div>
+  </body>
 </html>
