--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -57,7 +57,7 @@
                         <a href="">About</a>
                     </li>
                     <li>
-                        <a href="">Contact</a>
+                      <a href="{% url 'blog:contact' %}">Contact</a>
                     </li>
                 </ul>
             </div>
