--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -56,9 +56,6 @@
                     <li>
                         <a href="">About</a>
                     </li>
-                    <li>
-                      <a href="{% url 'blog:contact' %}">Contact</a>
-                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -134,6 +131,14 @@
                                     <i class="fa fa-circle fa-stack-2x"></i>
                                     <i class="fa fa-github fa-stack-1x fa-inverse"></i>
                                 </span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="mailto: dlance1996@gmail.com">
+                              <span class="fa-stack fa-lg">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
+                              </span>
                             </a>
                         </li>
                     </ul>
