--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -71,7 +71,7 @@
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="post-heading">
                       <h1>{{ post.title }}</h1>
-                        <h2 class="subheading">Problems look mighty small from 150 miles up</h2>
+                        <h2 class="subheading">{{ post.description }}</h2>
                         <span class="meta">Posted: {{ post.pub_date }}</span>
                     </div>
                 </div>
