--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -89,8 +89,8 @@
                         <h2 class="post-title">
                           {{ post.title }}
                         </h2>
-                        <h3 class="post-subtitle">
-                          temp post desciption
+                        <h3 class="post-subtitle"> 
+                          {{ post.description }}
                         </h3>
                     </a>
                     <p class="post-meta">Posted: {{ post.pub_date }}</p>
