Changed up images for pages

--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -54,7 +54,7 @@
                       <a href="{% url 'blog:post_list' %}">Home</a>
                     </li>
                     <li>
-                        <a href="">About</a>
+                      <a href="{% url 'blog:about' %}">About</a>
                     </li>
                 </ul>
             </div>
