Removed text field from post and shifted towards using section system

--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -82,23 +82,16 @@
     <!-- Post Content -->
     <article>
         <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <p>{{ post.text|linebreaks }} </p>
-                </div>
-            </div>
-            <hr>
             {% for section in post.section_set.all %}
+            {% ifnotequal forloop.counter 1 %}
+              <hr>
+            {% endifnotequal %}
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <h2 class="section-heading">{{ section.title }}</h2>
-                    {% ifnotequal section.img "" %}
-                    <img href="{{ section.img.url }}"/>
-                    {% endifnotequal %}
                     <p>{{ section.text }}</p>
                 </div>
             </div>
-            <hr>
             {% endfor %}
         </div>
     </article>
