--- a/blog/templates/blog/post.html
+++ b/blog/templates/blog/post.html
@@ -88,7 +88,9 @@
             {% endifnotequal %}
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <h2 class="section-heading">{{ section.title }}</h2>
+                    <a href="{{ section.title_url }}">
+                      <h2 class="section-heading">{{ section.title }}</h2>
+                    </a>
                     <p>{{ section.text }}</p>
                 </div>
             </div>
